updated from sdvis

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 # add_library(transferFunction TransferFunction/widgets/TransferFunctionWidget.cpp)
 # target_link_libraries(transferFunction imgui)
+find_package(glm REQUIRED)
 
 add_library(util
 	callbacks.cpp
@@ -26,6 +27,7 @@ target_link_libraries(util PUBLIC
 	glfw
 	imgui
 	gl3w
+	glm
 	rkcommon::rkcommon
 	${OPENGL_LIBRARIES}
 	${OSPRAY_LIBRARIES})
